--- a/.aws/amplify.yaml
+++ b/.aws/amplify.yaml
@@ -7,7 +7,8 @@ applications:
             - npm install
         build:
           commands:
-            - echo "Build[${BUILD_ENV}] API_GATEWAY[${ENDPOINT}]"
+            - echo "Setting ENV for SSR..."
+            - env | grep -e BUILD_ENV -e ENDPOINT -e AMZ_ACCESS_KEY_ID -e AMZ_BUCKET_NAME -e AMZ_REGION -e AMZ_SECRET_ACCESS_KEY >> .env.production
             - npm run build
       artifacts:
         baseDirectory: .next
@@ -16,4 +17,5 @@ applications:
       cache:
         paths:
           - node_modules/**/*
+          - .next/cache/**/*
     appRoot: frontend
