--- a/backend/matching-service/Dockerfile
+++ b/backend/matching-service/Dockerfile
@@ -20,6 +20,14 @@ COPY .env .env
 # Build the project
 RUN npm run build
 
+# event bus = redis://<container_name>:6380/
+ARG REDIS_EVENT_BUS=redis://peerprep-eventbus:6380/
+ENV REDIS_EVENT_BUS=$REDIS_EVENT_BUS
+
+# Copy only the production artifacts from the build stage
+COPY --from=build /app/dist ./dist
+COPY --from=build /app/package*.json ./
+
 ARG PORT=5200
 
 EXPOSE $PORT
