--- a/backend/matching-service/Dockerfile
+++ b/backend/matching-service/Dockerfile
@@ -23,8 +23,8 @@ ARG CORS_ALLOWED_ORIGINS=http://localhost:3000
 ENV CORS_ALLOWED_ORIGINS=$CORS_ALLOWED_ORIGINS
 
 # event bus = redis://<container_name>:6380/
-ARG REDIS_EVENT_BUS=redis://peerprep-eventbus:6380/
-ENV REDIS_EVENT_BUS=$REDIS_EVENT_BUS
+ARG EVENT_BUS_CONTAINER_NAME=${EVENT_BUS_CONTAINER_NAME}
+ENV EVENT_BUS_CONTAINER_NAME=$EVENT_BUS_CONTAINER_NAME
 
 # Copy only the production artifacts from the build stage
 COPY --from=build /app/dist ./dist
