successfully integrated matching-collaboration docker containers with docker-compose

--- a/backend/collaboration-service/Dockerfile
+++ b/backend/collaboration-service/Dockerfile
@@ -22,17 +22,14 @@ ARG CORS_ALLOWED_ORIGINS=http://localhost:3000
 ENV CORS_ALLOWED_ORIGINS=$CORS_ALLOWED_ORIGINS
 
 ARG PORT=5300
-ENV PORT=$PORT
-
-# locally, it will be localhost
-# now, it is redis://<container_name>:6380/
+ENV SERVICE_PORT=$PORT
 
 # Defing service specific arguments
-ARG REDIS_EVENT_BUS=redis://${EVENT_BUS_CONTAINER_NAME}/
-ENV REDIS_EVENT_BUS=$REDIS_EVENT_BUS
+ARG EVENT_BUS_CONTAINER_NAME=${EVENT_BUS_CONTAINER_NAME}/
+ENV EVENT_BUS_CONTAINER_NAME=$EVENT_BUS_CONTAINER_NAME
 
-ARG REDIS_URL=redis://${COLLABORATION_CACHE_CONTAINER_NAME}/
-ENV REDIS_URL=$REDIS_URL
+ARG COLLABORATION_CACHE_CONTAINER_NAME=${COLLABORATION_CACHE_CONTAINER_NAME}/
+ENV COLLABORATION_CACHE_CONTAINER_NAME=$COLLABORATION_CACHE_CONTAINER_NAME
 
 # Copy only the production artifacts from the build stage
 COPY --from=build /app/dist ./dist
