--- a/compose.yaml
+++ b/compose.yaml
@@ -29,16 +29,18 @@ services:
     networks:
       - peerprep
 
-  # collaboration-service:
-  #   build: 
-  #     context: ./backend/collaboration-service
-  #     dockerfile: Dockerfile
-  #     args:
-  #       COLLABORATION_CACHE_CONTAINER_NAME: "collaboration-cache"
-  #       EVENT_BUS_CONTAINER_NAME: "event-bus"
-  #   ports:
-  #     - "5300:5300"
-  #   container_name: collaboration-service
+  collaboration-service:
+    build: 
+      context: ./backend/collaboration-service
+      dockerfile: Dockerfile
+      args:
+        COLLABORATION_CACHE_CONTAINER_NAME: collaboration-cache
+        EVENT_BUS_CONTAINER_NAME: event-bus
+    ports:
+      - "5300:5300"
+    container_name: collaboration-service
+    networks:
+      - peerprep
 
 networks:
   peerprep:
