make changes to deploy to cloud

--- a/.aws/peerprep-stack.yaml
+++ b/.aws/peerprep-stack.yaml
@@ -337,17 +337,17 @@ Resources:
         FailureThreshold: 1
       Name: !Join ['-', [!Ref ProjectName, !Ref EnvironmentName, 'ServiceDiscoveryServiceAuth']]
 
-  # ServiceDiscoveryServiceCollaboration:
-  #   Type: 'AWS::ServiceDiscovery::Service'
-  #   Properties:
-  #     DnsConfig:
-  #       DnsRecords:
-  #         - Type: SRV
-  #           TTL: 60
-  #       NamespaceId: !Ref PrivateDNSNamespace
-  #     HealthCheckCustomConfig:
-  #       FailureThreshold: 1
-  #     Name: !Join ['-', [!Ref ProjectName, !Ref EnvironmentName, 'ServiceDiscoveryServiceCollaboration']]
+  ServiceDiscoveryServiceCollaboration:
+    Type: 'AWS::ServiceDiscovery::Service'
+    Properties:
+      DnsConfig:
+        DnsRecords:
+          - Type: SRV
+            TTL: 60
+        NamespaceId: !Ref PrivateDNSNamespace
+      HealthCheckCustomConfig:
+        FailureThreshold: 1
+      Name: !Join ['-', [!Ref ProjectName, !Ref EnvironmentName, 'ServiceDiscoveryServiceCollaboration']]
 
   # ServiceDiscoveryServiceHistory:
   #   Type: 'AWS::ServiceDiscovery::Service'
@@ -448,26 +448,26 @@ Resources:
             SecurityGroups:
               - !Ref ContainerSecurityGroup
 
-  # ServiceCollaboration: 
-  #   Type: AWS::ECS::Service
-  #   DependsOn:
-  #     - PrivateRoute
-  #   Properties: 
-  #     ServiceName: !Join ['-', [!Ref ProjectName, !Ref EnvironmentName, 'ServiceCollaboration']]
-  #     Cluster: !Ref ECSCluster
-  #     TaskDefinition: !Ref TaskDefinitionCollaboration
-  #     LaunchType: FARGATE
-  #     DesiredCount: 1
-  #     ServiceRegistries:
-  #       - RegistryArn: !GetAtt ServiceDiscoveryServiceCollaboration.Arn
-  #         Port: 80
-  #     NetworkConfiguration:
-  #         AwsvpcConfiguration:
-  #           AssignPublicIp: DISABLED
-  #           Subnets:
-  #             - !Ref PrivateSubnet
-  #           SecurityGroups:
-  #             - !Ref ContainerSecurityGroup
+  ServiceCollaboration: 
+    Type: AWS::ECS::Service
+    DependsOn:
+      - PrivateRoute
+    Properties: 
+      ServiceName: !Join ['-', [!Ref ProjectName, !Ref EnvironmentName, 'ServiceCollaboration']]
+      Cluster: !Ref ECSCluster
+      TaskDefinition: !Ref TaskDefinitionCollaboration
+      LaunchType: FARGATE
+      DesiredCount: 1
+      ServiceRegistries:
+        - RegistryArn: !GetAtt ServiceDiscoveryServiceCollaboration.Arn
+          Port: 80
+      NetworkConfiguration:
+          AwsvpcConfiguration:
+            AssignPublicIp: DISABLED
+            Subnets:
+              - !Ref PrivateSubnet
+            SecurityGroups:
+              - !Ref ContainerSecurityGroup
 
   # ServiceHistory: 
   #   Type: AWS::ECS::Service
@@ -617,34 +617,75 @@ Resources:
       Memory: '512'
       Cpu: '256'
 
-  # TaskDefinitionCollaboration:
-  #   Type: 'AWS::ECS::TaskDefinition'
-  #   Properties:
-  #     Family: !Join ['-', [!Ref ProjectName, !Ref EnvironmentName, 'TaskDefinitionCollaboration']]
-  #     TaskRoleArn: !GetAtt ECSTaskRole.Arn
-  #     ExecutionRoleArn: !GetAtt ECSTaskExecutionRole.Arn
-  #     RequiresCompatibilities:
-  #       - FARGATE
-  #     ContainerDefinitions:
-  #         - Name: 'collaboration-service'
-  #           Image: !Join ['', [!GetAtt ECRContainerRepo.RepositoryUri, ':collaboration-service']]
-  #           Essential: true
-  #           PortMappings:
-  #             - ContainerPort: 80
-  #               Protocol: tcp
-  #           Environment:
-  #             - Name: SERVICE_PORT
-  #               Value: 80
-  #           LogConfiguration: 
-  #             LogDriver: awslogs
-  #             Options:
-  #               awslogs-create-group: true
-  #               awslogs-group: !Join ['-', [!Ref ProjectName, !Ref EnvironmentName, 'collaboration-service']]
-  #               awslogs-region: !Ref AWS::Region
-  #               awslogs-stream-prefix: ecs
-  #     NetworkMode: awsvpc
-  #     Memory: '512'
-  #     Cpu: '256'
+  TaskDefinitionCollaboration:
+    Type: 'AWS::ECS::TaskDefinition'
+    Properties:
+      Family: !Join ['-', [!Ref ProjectName, !Ref EnvironmentName, 'TaskDefinitionCollaboration']]
+      TaskRoleArn: !GetAtt ECSTaskRole.Arn
+      ExecutionRoleArn: !GetAtt ECSTaskExecutionRole.Arn
+      RequiresCompatibilities:
+        - FARGATE
+      ContainerDefinitions:
+          - Name: 'collaboration-service'
+            Image: !Join ['', [!GetAtt ECRContainerRepo.RepositoryUri, ':collaboration-service']]
+            Essential: true
+            PortMappings:
+              - ContainerPort: 80
+                Protocol: tcp
+            Environment:
+              - Name: SERVICE_PORT
+                Value: 80
+              - Name: COLLABORATION_CACHE_CONTAINER_NAME
+                Value: collaboration-cache.${EnvironmentName}.svc.cluster.local
+            LogConfiguration: 
+              LogDriver: awslogs
+              Options:
+                awslogs-create-group: true
+                awslogs-group: !Join ['-', [!Ref ProjectName, !Ref EnvironmentName, 'collaboration-service']]
+                awslogs-region: !Ref AWS::Region
+                awslogs-stream-prefix: ecs
+          - Name: 'collaboration-cache'
+            Image: !Join ['', [!GetAtt ECRContainerRepo.RepositoryUri, ':collaboration-cache']]
+            Essential: true
+            PortMappings:
+              - ContainerPort: 6379
+                Protocol: tcp
+            LogConfiguration: 
+              LogDriver: awslogs
+              Options:
+                awslogs-create-group: true
+                awslogs-group: !Join ['-', [!Ref ProjectName, !Ref EnvironmentName, 'collaboration-cache']]
+                awslogs-region: !Ref AWS::Region
+                awslogs-stream-prefix: ecs
+      NetworkMode: awsvpc
+      Memory: '512'
+      Cpu: '256'
+
+  TaskDefinitionEventBus:
+    Type: 'AWS::ECS::TaskDefinition'
+    Properties:
+      Family: !Join ['-', [!Ref ProjectName, !Ref EnvironmentName, 'TaskDefinitionEventBus']]
+      TaskRoleArn: !GetAtt ECSTaskRole.Arn
+      ExecutionRoleArn: !GetAtt ECSTaskExecutionRole.Arn
+      RequiresCompatibilities:
+        - FARGATE
+      ContainerDefinitions:
+          - Name: 'event-bus'
+            Image: !Join ['', [!GetAtt ECRContainerRepo.RepositoryUri, ':event-bus']]
+            Essential: true
+            PortMappings:
+              - ContainerPort: 6380
+                Protocol: tcp
+            LogConfiguration: 
+              LogDriver: awslogs
+              Options:
+                awslogs-create-group: true
+                awslogs-group: !Join ['-', [!Ref ProjectName, !Ref EnvironmentName, 'event-bus']]
+                awslogs-region: !Ref AWS::Region
+                awslogs-stream-prefix: ecs
+      NetworkMode: awsvpc
+      Memory: '512'
+      Cpu: '256'
 
   # TaskDefinitionHistory:
   #   Type: 'AWS::ECS::TaskDefinition'
