--- a/database/compose.yaml
+++ b/database/compose.yaml
@@ -1,3 +1,4 @@
+# This compose file serves as a debugging process for other services, will not use this in production
 services:
   event-bus:
     build: ./event-bus
