--- a/compose.yaml
+++ b/compose.yaml
@@ -17,6 +17,16 @@ services:
     networks:
       - peerprep
 
+  auth-service:
+    build:
+      context: ./backend/auth-service
+      dockerfile: Dockerfile
+    ports:
+      - "5050:5050"
+    container_name: auth-service
+    networks:
+      peerprep
+
   matching-service:
     build: 
       context: ./backend/matching-service
