update code during mtg

--- a/.aws/peerprep-stack.yaml
+++ b/.aws/peerprep-stack.yaml
@@ -577,6 +577,8 @@ Resources:
                 Value: 80
               - Name: GATEWAY
                 Value: !Sub 'https://${HttpApi}.execute-api.${AWS::Region}.amazonaws.com'
+              - Name: EVENT_BUS_CONTAINER_NAME
+                Value: !Ref ServiceDiscoveryServiceEventBus
             LogConfiguration: 
               LogDriver: awslogs
               Options:
@@ -668,8 +670,10 @@ Resources:
             Environment:
               - Name: SERVICE_PORT
                 Value: 80
-              - Name: COLLABORATION_CACHE_CONTAINER_NAME
+              - Name: EVENT_BUS_CONTAINER_NAME
                 Value: !Ref ServiceDiscoveryServiceEventBus
+              - Name: GATEWAY
+                Value: !Sub 'https://${HttpApi}.execute-api.${AWS::Region}.amazonaws.com'
             LogConfiguration: 
               LogDriver: awslogs
               Options:
@@ -707,7 +711,7 @@ Resources:
             Image: !Join ['', [!GetAtt ECRContainerRepo.RepositoryUri, ':event-bus']]
             Essential: true
             PortMappings:
-              - ContainerPort: 6380
+              - ContainerPort: 6379
                 Protocol: tcp
             LogConfiguration: 
               LogDriver: awslogs
@@ -716,7 +720,6 @@ Resources:
                 awslogs-group: !Join ['-', [!Ref ProjectName, !Ref EnvironmentName, 'event-bus']]
                 awslogs-region: !Ref AWS::Region
                 awslogs-stream-prefix: ecs
-            ServiceName: !Ref ServiceDiscoveryServiceEventBus
       NetworkMode: awsvpc
       Memory: '512'
       Cpu: '256'
@@ -1136,6 +1139,17 @@ Resources:
       RouteKey: "DELETE /user/api/users/{userId}"
       Target: !Sub "integrations/${IntegrationUser}"
 
+  # Route for collaboration
+  RouteCollaborationSocket:
+    Type: "AWS::ApiGatewayV2::Route"
+    Properties:
+      ApiId: !Ref HttpApi
+      ApiKeyRequired: false
+      AuthorizationType: "NONE"
+      RequestParameters: {}
+      RouteKey: "ANY /collaboration/socket/{proxy}"
+      Target: !Sub "integrations/${IntegrationCollaboration}"
+
   IntegrationQuestion:
     Type: "AWS::ApiGatewayV2::Integration"
     Properties:
@@ -1179,6 +1193,17 @@ Resources:
       IntegrationMethod: "ANY"
       IntegrationType: "HTTP_PROXY"
       IntegrationUri: !GetAtt ServiceDiscoveryServiceUser.Arn
+      PayloadFormatVersion: '1.0'
+  IntegrationCollaboration:
+    Type: "AWS::ApiGatewayV2::Integration"
+    Properties:
+      ApiId: !Ref HttpApi
+      Description: !Join ['-', [!Ref ProjectName, !Ref EnvironmentName, 'IntegrationCollaboration']] 
+      ConnectionType: "VPC_LINK"
+      ConnectionId: !Ref HttpApiVPCLink
+      IntegrationMethod: "ANY"
+      IntegrationType: "HTTP_PROXY"
+      IntegrationUri: !GetAtt ServiceDiscoveryServiceCollaboration.Arn
       PayloadFormatVersion: '1.0'
 
   HttpApiStage:
