--- a/.github/workflows/deploy_backend_aws_dev.yml
+++ b/.github/workflows/deploy_backend_aws_dev.yml
@@ -8,15 +8,19 @@ env:
   AWS_REGION:     ap-southeast-1
   ECR_REPOSITORY: peerprep-development-ecr-repo
   ECS_CLUSTER:    peerprep-development-ECSCluster
+
+  NAMESPACE:      peerprep-development-ServiceDiscoveryPeerprep
+
+  EVENT_BUS_SERVICE_NAME:             peerprep-development-ServiceEventBus
   
-  QUESTION_CONTAINER_NAME:      question-service
-  MATCHING_CONTAINER_NAME:      matching-service
-  AUTH_CONTAINER_NAME:          auth-service
-  USER_CONTAINER_NAME:          user-service
-  COLLABORATION_CONTAINER_NAME: collaboration-service
-  HISTORY_CONTAINER_NAME:       history-service
+  QUESTION_CONTAINER_NAME:            question-service
+  MATCHING_CONTAINER_NAME:            matching-service
+  AUTH_CONTAINER_NAME:                auth-service
+  USER_CONTAINER_NAME:                user-service
+  COLLABORATION_CONTAINER_NAME:       collaboration-service
+  HISTORY_CONTAINER_NAME:             history-service
   COLLABORATION_CACHE_CONTAINER_NAME: collaboration-cache
-  EVENT_BUS_CONTAINER_NAME:     event-bus
+  EVENT_BUS_CONTAINER_NAME:           event-bus
 
 permissions:
   contents: read
@@ -64,6 +68,7 @@ jobs:
             LOG_LEVEL=${{ vars.LOG_LEVEL }}
             CORS_ALLOWED_ORIGINS=${{ secrets.CORS_ALLOWED_ORIGINS }}
             MATCHING_TIMEOUT=${{ vars.MATCHING_TIMEOUT }} 
+            EVENT_BUS_CONTAINER_NAME=${{ env.EVENT_BUS_SERVICE_NAME}}.${{ env.NAMESPACE }}
 
       - name: Build, tag, and push ${{ env.AUTH_CONTAINER_NAME }} image to Amazon ECR
         uses: docker/build-push-action@v5
@@ -104,7 +109,7 @@ jobs:
             LOG_LEVEL=${{ vars.LOG_LEVEL }}
             CORS_ALLOWED_ORIGINS=${{ secrets.CORS_ALLOWED_ORIGINS }}
             COLLABORATION_CACHE_CONTAINER_NAME=${{ env.COLLABORATION_CACHE_CONTAINER_NAME }}
-            EVENT_BUS_CONTAINER_NAME=${{ env.EVENT_BUS_CONTAINER_NAME }}
+            EVENT_BUS_CONTAINER_NAME=${{ env.EVENT_BUS_SERVICE_NAME}}.${{ env.NAMESPACE }}
 
       - name: Build, tag, and push ${{ env.COLLABORATION_CACHE_CONTAINER_NAME }} image to Amazon ECR
         uses: docker/build-push-action@v5
