update stack and deployment args to match discovery name

--- a/.aws/peerprep-stack.yaml
+++ b/.aws/peerprep-stack.yaml
@@ -284,7 +284,7 @@ Resources:
   # ECS Namespaces and ServiceDiscovery
   #=================================== 
   PrivateDNSNamespace:
-    Type: 'AWS::ServiceDiscovery::PrivateDnsNamespace'
+    Type: 'AWS::ServiceDiscovery::PrivateDnsNamespace'      
     Properties:
       Vpc: !Ref VPC
       Name: !Join ['-', [!Ref ProjectName, !Ref EnvironmentName, 'ServiceDiscoveryPeerprep']]
@@ -492,7 +492,7 @@ Resources:
       LaunchType: FARGATE
       DesiredCount: 1
       ServiceRegistries:
-        - RegistryArn: !GetAtt ServiceDiscoveryServiceCollaboration.Arn
+        - RegistryArn: !GetAtt ServiceDiscoveryServiceEventBus.Arn
           Port: 80
       NetworkConfiguration:
           AwsvpcConfiguration:
@@ -711,7 +711,8 @@ Resources:
             Image: !Join ['', [!GetAtt ECRContainerRepo.RepositoryUri, ':event-bus']]
             Essential: true
             PortMappings:
-              - ContainerPort: 6379
+              - Name: 'event-bus-6379-tcp' # Need an alias for service connect
+                ContainerPort: 6379
                 Protocol: tcp
             LogConfiguration: 
               LogDriver: awslogs
