--- a/.github/workflows/deploy_backend_aws_dev.yml
+++ b/.github/workflows/deploy_backend_aws_dev.yml
@@ -12,6 +12,8 @@ env:
   NAMESPACE:      peerprep-development-ServiceDiscoveryPeerprep
 
   EVENT_BUS_SERVICE_NAME:             peerprep-development-ServiceEventBus
+
+  EVENT_BUS_DICOVERY_NAME:            peerprep-development-serviceeventbus	
   
   QUESTION_CONTAINER_NAME:            question-service
   MATCHING_CONTAINER_NAME:            matching-service
@@ -68,7 +70,7 @@ jobs:
             LOG_LEVEL=${{ vars.LOG_LEVEL }}
             CORS_ALLOWED_ORIGINS=${{ secrets.CORS_ALLOWED_ORIGINS }}
             MATCHING_TIMEOUT=${{ vars.MATCHING_TIMEOUT }} 
-            EVENT_BUS_CONTAINER_NAME=${{ env.EVENT_BUS_SERVICE_NAME}}.${{ env.NAMESPACE }}
+            EVENT_BUS_CONTAINER_NAME=${{ env.EVENT_BUS_DICOVERY_NAME }}
 
       - name: Build, tag, and push ${{ env.AUTH_CONTAINER_NAME }} image to Amazon ECR
         uses: docker/build-push-action@v5
@@ -109,7 +111,7 @@ jobs:
             LOG_LEVEL=${{ vars.LOG_LEVEL }}
             CORS_ALLOWED_ORIGINS=${{ secrets.CORS_ALLOWED_ORIGINS }}
             COLLABORATION_CACHE_CONTAINER_NAME=${{ env.COLLABORATION_CACHE_CONTAINER_NAME }}
-            EVENT_BUS_CONTAINER_NAME=${{ env.EVENT_BUS_SERVICE_NAME}}.${{ env.NAMESPACE }}
+            EVENT_BUS_CONTAINER_NAME=${{ env.EVENT_BUS_DICOVERY_NAME }}
 
       - name: Build, tag, and push ${{ env.COLLABORATION_CACHE_CONTAINER_NAME }} image to Amazon ECR
         uses: docker/build-push-action@v5
