--- a/backend/auth-service/Dockerfile
+++ b/backend/auth-service/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:20 AS build
+FROM node:alpine AS build
 WORKDIR /app
 
 # Copy the source code and install dependencies
@@ -8,7 +8,7 @@ COPY . .
 RUN npm run build 
 
 # Stage 2: Production environment
-FROM node:20
+FROM node:alpine
 WORKDIR /app
 
 # Defing service arguments
