Add vpc endpoints

--- a/.aws/peerprep-stack.yaml
+++ b/.aws/peerprep-stack.yaml
@@ -155,6 +155,84 @@ Resources:
           Key: "Name"
           Value: !Join ['-', [!Ref ProjectName, !Ref EnvironmentName, 'NatGateway']]
   
+  # Security group
+  ContainerSecurityGroup:
+    Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupName: !Join ['-', [!Ref ProjectName, !Ref EnvironmentName, 'ContainerSecurityGroup']]
+      GroupDescription: Access to the Fargate containers
+      VpcId: !Ref 'VPC'
+
+  ContainerSecurityGroupSelfIngress:
+    Type: AWS::EC2::SecurityGroupIngress
+    Properties:
+      Description: !Join ['-', [!Ref EnvironmentName, 'ingress-80']]
+      GroupId: !Ref ContainerSecurityGroup
+      SourceSecurityGroupId: !Ref ContainerSecurityGroup
+      IpProtocol: tcp
+      FromPort: 80
+      ToPort: 80
+
+  ContainerSecurityGroupSelfIngress:
+    Type: AWS::EC2::SecurityGroupIngress
+    Properties:
+      Description: !Join ['-', [!Ref EnvironmentName, 'ingress-443']]
+      GroupId: !Ref ContainerSecurityGroup
+      SourceSecurityGroupId: !Ref ContainerSecurityGroup
+      IpProtocol: tcp
+      FromPort: 443
+      ToPort: 443
+
+  # VPC Endpoint
+  VPCEndpointEcrDrk:
+    Type: "AWS::EC2::VPCEndpoint"
+    Properties:
+      VpcEndpointType: "Interface"
+      VpcId: !Ref VPC
+      ServiceName: !Sub "com.amazonaws.${AWS::Region}.ecr.dkr"
+      PolicyDocument: "{\"Version\":\"2008-10-17\",\"Statement\":[{\"Effect\":\"Allow\",\"Principal\":\"*\",\"Action\":\"*\",\"Resource\":\"*\"}]}"
+      SubnetIds: 
+        - !Ref PrivateSubnet
+      PrivateDnsEnabled: true
+      SecurityGroupIds: 
+        - !Ref ContainerSecurityGroup
+
+  VPCEndpointEcrApi:
+    Type: "AWS::EC2::VPCEndpoint"
+    Properties:
+      VpcEndpointType: "Interface"
+      VpcId: !Ref VPC8839da1
+      ServiceName: !Sub "com.amazonaws.${AWS::Region}.ecr.api"
+      PolicyDocument: "{\"Version\":\"2008-10-17\",\"Statement\":[{\"Effect\":\"Allow\",\"Principal\":\"*\",\"Action\":\"*\",\"Resource\":\"*\"}]}"
+      SubnetIds: 
+        - !Ref PrivateSubnet
+      PrivateDnsEnabled: true
+      SecurityGroupIds: 
+        - !Ref ContainerSecurityGroup
+
+  VPCEndpointS3:
+    Type: "AWS::EC2::VPCEndpoint"
+    Properties:
+      VpcEndpointType: "Gateway"
+      VpcId: !Ref VPC
+      ServiceName: !Sub "com.amazonaws.${AWS::Region}.s3"
+      PolicyDocument: "{\"Version\":\"2008-10-17\",\"Statement\":[{\"Effect\":\"Allow\",\"Principal\":\"*\",\"Action\":\"*\",\"Resource\":\"*\"}]}"
+      RouteTableIds: 
+      - !Ref PrivateRouteTable
+      PrivateDnsEnabled: false
+
+  VPCEndpointLogs:
+    Type: "AWS::EC2::VPCEndpoint"
+    Properties:
+      VpcEndpointType: "Interface"
+      VpcId: !Ref VPC
+      ServiceName: !Sub "com.amazonaws.${AWS::Region}.logs"
+      PolicyDocument: "{\"Version\":\"2008-10-17\",\"Statement\":[{\"Effect\":\"Allow\",\"Principal\":\"*\",\"Action\":\"*\",\"Resource\":\"*\"}]}"
+      SubnetIds: 
+        - !Ref PrivateSubnet
+      PrivateDnsEnabled: true
+      SecurityGroupIds: 
+        - !Ref ContainerSecurityGroup
   #=================================== 
   # IAM Roles
   #=================================== 
@@ -262,23 +340,8 @@ Resources:
     Type: AWS::ECS::Cluster
     Properties:
       ClusterName: !Join ['-', [!Ref ProjectName, !Ref EnvironmentName, 'ECSCluster']]
-
-  ContainerSecurityGroup:
-    Type: AWS::EC2::SecurityGroup
-    Properties:
-      GroupName: !Join ['-', [!Ref ProjectName, !Ref EnvironmentName, 'ContainerSecurityGroup']]
-      GroupDescription: Access to the Fargate containers
-      VpcId: !Ref 'VPC'
-
-  ContainerSecurityGroupSelfIngress:
-    Type: AWS::EC2::SecurityGroupIngress
-    Properties:
-      Description: !Join [' ', [!Ref EnvironmentName, 'ContainerSecurityGroupSelfIngress']]
-      GroupId: !Ref ContainerSecurityGroup
-      SourceSecurityGroupId: !Ref ContainerSecurityGroup
-      IpProtocol: tcp
-      FromPort: 80
-      ToPort: 80
+      ServiceConnectDefaults:
+         Namespace: !Ref PrivateDNSNamespace
 
   #=================================== 
   # ECS Namespaces and ServiceDiscovery
@@ -287,7 +350,7 @@ Resources:
     Type: 'AWS::ServiceDiscovery::PrivateDnsNamespace'      
     Properties:
       Vpc: !Ref VPC
-      Name: !Join ['-', [!Ref ProjectName, !Ref EnvironmentName, 'ServiceDiscoveryPeerprep']]
+      Name: !Join ['-', [!Ref ProjectName, !Ref EnvironmentName, 'ServiceDiscoveryServiceQuestion']]
 
   ServiceDiscoveryServiceQuestion:
     Type: 'AWS::ServiceDiscovery::Service'
@@ -541,6 +604,7 @@ Resources:
             PortMappings:
               - ContainerPort: 80
                 Protocol: tcp
+                Name: auth-service-80-tcp
             Environment:
               - Name: SERVICE_PORT
                 Value: 80
@@ -572,6 +636,7 @@ Resources:
             PortMappings:
               - ContainerPort: 80
                 Protocol: tcp
+                Name: question-service-80-tcp
             Environment:
               - Name: SERVICE_PORT
                 Value: 80
@@ -605,6 +670,7 @@ Resources:
             PortMappings:
               - ContainerPort: 80
                 Protocol: tcp
+                Name: matching-service-80-tcp
             Environment:
               - Name: SERVICE_PORT
                 Value: 80
@@ -636,6 +702,7 @@ Resources:
             PortMappings:
               - ContainerPort: 80
                 Protocol: tcp
+                Name: user-service-80-tcp
             Environment:
               - Name: SERVICE_PORT
                 Value: 80
