--- a/.github/workflows/deploy_backend_aws_dev.yml
+++ b/.github/workflows/deploy_backend_aws_dev.yml
@@ -47,17 +47,17 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Build, tag, and push ${{ env.QUESTION_CONTAINER_NAME }} image to Amazon ECR
-        uses: docker/build-push-action@v5
-        with: 
-          context: backend/${{ env.QUESTION_CONTAINER_NAME }}
-          push: true
-          tags: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.QUESTION_CONTAINER_NAME }}
-          build-args: |
-            NODE_ENV=${{ vars.BUILD_ENV }}
-            LOG_LEVEL=${{ vars.LOG_LEVEL }}
-            CORS_ALLOWED_ORIGINS=${{ secrets.CORS_ALLOWED_ORIGINS }}
-            DATABASE_URL=${{ secrets.DATABASE_URL }}
+      # - name: Build, tag, and push ${{ env.QUESTION_CONTAINER_NAME }} image to Amazon ECR
+      #   uses: docker/build-push-action@v5
+      #   with: 
+      #     context: backend/${{ env.QUESTION_CONTAINER_NAME }}
+      #     push: true
+      #     tags: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.QUESTION_CONTAINER_NAME }}
+      #     build-args: |
+      #       NODE_ENV=${{ vars.BUILD_ENV }}
+      #       LOG_LEVEL=${{ vars.LOG_LEVEL }}
+      #       CORS_ALLOWED_ORIGINS=${{ secrets.CORS_ALLOWED_ORIGINS }}
+      #       DATABASE_URL=${{ secrets.DATABASE_URL }}
 
       - name: Build, tag, and push ${{ env.MATCHING_CONTAINER_NAME }} image to Amazon ECR
         uses: docker/build-push-action@v5
@@ -72,33 +72,33 @@ jobs:
             MATCHING_TIMEOUT=${{ vars.MATCHING_TIMEOUT }} 
             EVENT_BUS_CONTAINER_NAME=${{ env.EVENT_BUS_DICOVERY_NAME }}
 
-      - name: Build, tag, and push ${{ env.AUTH_CONTAINER_NAME }} image to Amazon ECR
-        uses: docker/build-push-action@v5
-        with: 
-          context: backend/${{ env.AUTH_CONTAINER_NAME }}
-          push: true
-          tags: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.AUTH_CONTAINER_NAME }}
-          build-args: |
-            NODE_ENV=${{ vars.BUILD_ENV }}
-            LOG_LEVEL=${{ vars.LOG_LEVEL }}
-            CORS_ALLOWED_ORIGINS=${{ secrets.CORS_ALLOWED_ORIGINS }}
-            JWT_SECRET=${{ secrets.JWT_SECRET }}
-            EMAIL_VERIFICATION_SECRET=${{ secrets.EMAIL_VERIFICATION_SECRET }}
-            NM_MAIL=${{ secrets.NM_MAIL }}
-            NM_PASS=${{ secrets.NM_PASS }}
+      # - name: Build, tag, and push ${{ env.AUTH_CONTAINER_NAME }} image to Amazon ECR
+      #   uses: docker/build-push-action@v5
+      #   with: 
+      #     context: backend/${{ env.AUTH_CONTAINER_NAME }}
+      #     push: true
+      #     tags: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.AUTH_CONTAINER_NAME }}
+      #     build-args: |
+      #       NODE_ENV=${{ vars.BUILD_ENV }}
+      #       LOG_LEVEL=${{ vars.LOG_LEVEL }}
+      #       CORS_ALLOWED_ORIGINS=${{ secrets.CORS_ALLOWED_ORIGINS }}
+      #       JWT_SECRET=${{ secrets.JWT_SECRET }}
+      #       EMAIL_VERIFICATION_SECRET=${{ secrets.EMAIL_VERIFICATION_SECRET }}
+      #       NM_MAIL=${{ secrets.NM_MAIL }}
+      #       NM_PASS=${{ secrets.NM_PASS }}
 
-      - name: Build, tag, and push ${{ env.USER_CONTAINER_NAME }} image to Amazon ECR
-        uses: docker/build-push-action@v5
-        with: 
-          context: backend/${{ env.USER_CONTAINER_NAME }}
-          push: true
-          tags: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.USER_CONTAINER_NAME }}
-          build-args: |
-            NODE_ENV=${{ vars.BUILD_ENV }}
-            LOG_LEVEL=${{ vars.LOG_LEVEL }}
-            CORS_ALLOWED_ORIGINS=${{ secrets.CORS_ALLOWED_ORIGINS }}
-            DATABASE_URL=${{ secrets.DATABASE_URL }}
-            EMAIL_VERIFICATION_SECRET=${{ secrets.EMAIL_VERIFICATION_SECRET }}
+      # - name: Build, tag, and push ${{ env.USER_CONTAINER_NAME }} image to Amazon ECR
+      #   uses: docker/build-push-action@v5
+      #   with: 
+      #     context: backend/${{ env.USER_CONTAINER_NAME }}
+      #     push: true
+      #     tags: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.USER_CONTAINER_NAME }}
+      #     build-args: |
+      #       NODE_ENV=${{ vars.BUILD_ENV }}
+      #       LOG_LEVEL=${{ vars.LOG_LEVEL }}
+      #       CORS_ALLOWED_ORIGINS=${{ secrets.CORS_ALLOWED_ORIGINS }}
+      #       DATABASE_URL=${{ secrets.DATABASE_URL }}
+      #       EMAIL_VERIFICATION_SECRET=${{ secrets.EMAIL_VERIFICATION_SECRET }}
 
       - name: Build, tag, and push ${{ env.COLLABORATION_CONTAINER_NAME }} image to Amazon ECR
         uses: docker/build-push-action@v5
@@ -113,97 +113,97 @@ jobs:
             COLLABORATION_CACHE_CONTAINER_NAME=${{ env.COLLABORATION_CACHE_CONTAINER_NAME }}
             EVENT_BUS_CONTAINER_NAME=${{ env.EVENT_BUS_DICOVERY_NAME }}
 
-      - name: Build, tag, and push ${{ env.COLLABORATION_CACHE_CONTAINER_NAME }} image to Amazon ECR
-        uses: docker/build-push-action@v5
-        with: 
-          context: database/${{ env.COLLABORATION_CACHE_CONTAINER_NAME }}
-          push: true
-          tags: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.COLLABORATION_CACHE_CONTAINER_NAME }}
+      # - name: Build, tag, and push ${{ env.COLLABORATION_CACHE_CONTAINER_NAME }} image to Amazon ECR
+      #   uses: docker/build-push-action@v5
+      #   with: 
+      #     context: database/${{ env.COLLABORATION_CACHE_CONTAINER_NAME }}
+      #     push: true
+      #     tags: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.COLLABORATION_CACHE_CONTAINER_NAME }}
 
-      - name: Build, tag, and push ${{ env.EVENT_BUS_CONTAINER_NAME }} image to Amazon ECR
-        uses: docker/build-push-action@v5
-        with: 
-          context: database/${{ env.EVENT_BUS_CONTAINER_NAME }}
-          push: true
-          tags: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.EVENT_BUS_CONTAINER_NAME }}
+      # - name: Build, tag, and push ${{ env.EVENT_BUS_CONTAINER_NAME }} image to Amazon ECR
+      #   uses: docker/build-push-action@v5
+      #   with: 
+      #     context: database/${{ env.EVENT_BUS_CONTAINER_NAME }}
+      #     push: true
+      #     tags: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.EVENT_BUS_CONTAINER_NAME }}
 
-  # deploy:
-  #   name: Deploy
-  #   runs-on: ubuntu-latest
-  #   environment: development
-  #   needs: build
-  #   strategy:
-  #     matrix:
-  #       service: [
-  #         {
-  #           name: question-service,
-  #           ecs_service:  peerprep-development-ServiceQuestion,
-  #           ecs_task_def: peerprep-development-TaskDefinitionQuestion
-  #         },
-  #         {
-  #           name: matching-service,
-  #           ecs_service:  peerprep-development-ServiceMatching,
-  #           ecs_task_def: peerprep-development-TaskDefinitionMatching
-  #         },
-  #         {
-  #           name: user-service,
-  #           ecs_service:  peerprep-development-ServiceUser,
-  #           ecs_task_def: peerprep-development-TaskDefinitionUser
-  #         },
-  #         {
-  #           name: auth-service,
-  #           ecs_service:  peerprep-development-ServiceAuth,
-  #           ecs_task_def: peerprep-development-TaskDefinitionAuth
-  #         },
-  #         {
-  #           name: collaboration-service,
-  #           ecs_service:  peerprep-development-ServiceCollaboration,
-  #           ecs_task_def: peerprep-development-TaskDefinitionCollaboration
-  #         },
-  #         {
-  #           name: event-bus,
-  #           ecs_service:  peerprep-development-ServiceEventBus,
-  #           ecs_task_def: peerprep-development-TaskDefinitionEventBus
-  #         },
-  #         # {
-  #         #   name: history-service,
-  #         #   ecs_service:  peerprep-development-ServiceHistory,
-  #         #   ecs_task_def: peerprep-development-TaskDefinitionHistory
-  #         # },
-  #       ]
+  deploy:
+    name: Deploy
+    runs-on: ubuntu-latest
+    environment: development
+    needs: build
+    strategy:
+      matrix:
+        service: [
+          # {
+          #   name: question-service,
+          #   ecs_service:  peerprep-development-ServiceQuestion,
+          #   ecs_task_def: peerprep-development-TaskDefinitionQuestion
+          # },
+          {
+            name: matching-service,
+            ecs_service:  peerprep-development-ServiceMatching,
+            ecs_task_def: peerprep-development-TaskDefinitionMatching
+          },
+          # {
+          #   name: user-service,
+          #   ecs_service:  peerprep-development-ServiceUser,
+          #   ecs_task_def: peerprep-development-TaskDefinitionUser
+          # },
+          # {
+          #   name: auth-service,
+          #   ecs_service:  peerprep-development-ServiceAuth,
+          #   ecs_task_def: peerprep-development-TaskDefinitionAuth
+          # },
+          {
+            name: collaboration-service,
+            ecs_service:  peerprep-development-ServiceCollaboration,
+            ecs_task_def: peerprep-development-TaskDefinitionCollaboration
+          },
+          # {
+          #   name: event-bus,
+          #   ecs_service:  peerprep-development-ServiceEventBus,
+          #   ecs_task_def: peerprep-development-TaskDefinitionEventBus
+          # },
+          # {
+          #   name: history-service,
+          #   ecs_service:  peerprep-development-ServiceHistory,
+          #   ecs_task_def: peerprep-development-TaskDefinitionHistory
+          # },
+        ]
 
-  #   steps:
-  #     - name: Configure AWS credentials
-  #       uses: aws-actions/configure-aws-credentials@v1
-  #       with:
-  #         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  #         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  #         aws-region: ${{ env.AWS_REGION }}
+    steps:
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
 
-  #     - name: Login to Amazon ECR
-  #       id: login-ecr
-  #       uses: aws-actions/amazon-ecr-login@v1
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
 
-  #     - name: Download ${{ matrix.service.name }} task definition
-  #       id: download-task-def
-  #       env:
-  #         FAMILY: ${{ matrix.service.ecs_task_def }}
-  #       run: |
-  #         aws ecs describe-task-definition --task-definition $FAMILY --query taskDefinition > $FAMILY.json
-  #         echo "file=$FAMILY.json" >> "$GITHUB_OUTPUT"
+      - name: Download ${{ matrix.service.name }} task definition
+        id: download-task-def
+        env:
+          FAMILY: ${{ matrix.service.ecs_task_def }}
+        run: |
+          aws ecs describe-task-definition --task-definition $FAMILY --query taskDefinition > $FAMILY.json
+          echo "file=$FAMILY.json" >> "$GITHUB_OUTPUT"
 
-  #     - name: Fill in the ${{ matrix.service.name }} image ID in the Amazon ECS task definition
-  #       id: task-def
-  #       uses: aws-actions/amazon-ecs-render-task-definition@v1
-  #       with:
-  #         task-definition: ${{ steps.download-task-def.outputs.file }}
-  #         container-name: ${{ matrix.service.name }}
-  #         image: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ matrix.service.name }}
+      - name: Fill in the ${{ matrix.service.name }} image ID in the Amazon ECS task definition
+        id: task-def
+        uses: aws-actions/amazon-ecs-render-task-definition@v1
+        with:
+          task-definition: ${{ steps.download-task-def.outputs.file }}
+          container-name: ${{ matrix.service.name }}
+          image: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ matrix.service.name }}
 
-  #     - name: Deploy Amazon ECS ${{ matrix.service.name }} task definition
-  #       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
-  #       with:
-  #         task-definition: ${{ steps.task-def.outputs.task-definition }}
-  #         service: ${{ matrix.service.ecs_service }}
-  #         cluster: ${{ env.ECS_CLUSTER }}
-  #         wait-for-service-stability: true
+      - name: Deploy Amazon ECS ${{ matrix.service.name }} task definition
+        uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+        with:
+          task-definition: ${{ steps.task-def.outputs.task-definition }}
+          service: ${{ matrix.service.ecs_service }}
+          cluster: ${{ env.ECS_CLUSTER }}
+          wait-for-service-stability: true
