attemp to update and deploy matching and collab

--- a/.aws/peerprep-stack.yaml
+++ b/.aws/peerprep-stack.yaml
@@ -671,7 +671,7 @@ Resources:
               - Name: SERVICE_PORT
                 Value: 80
               - Name: EVENT_BUS_CONTAINER_NAME
-                Value: !Ref ServiceDiscoveryServiceEventBus
+                Value: peerprep-development-serviceeventbus.peerprep-development-ServiceDiscoveryPeerprep
               - Name: GATEWAY
                 Value: !Sub 'https://${HttpApi}.execute-api.${AWS::Region}.amazonaws.com'
             LogConfiguration: 
