--- a/backend/compose.yaml
+++ b/backend/compose.yaml
@@ -15,12 +15,17 @@ services:
     build: ./collaboration-service
     ports:
       - "5300:5300"
+    args:
+      - EVENT_BUS_CONTAINER_NAME=event-bus
+      - COLLABORATION_CACHE_CONTAINER_NAME=collaboration-cache
     networks:
       - peerprep
   matching-service:
     build: ./matching-service
     ports:
       - "5200:5200"
+    args:
+      - EVENT_BUS_CONTAINER_NAME=event-bus
     networks:
       - peerprep
 
