--- a/backend/auth-service/Dockerfile
+++ b/backend/auth-service/Dockerfile
@@ -22,7 +22,7 @@ ARG CORS_ALLOWED_ORIGINS=http://localhost:3000
 ENV CORS_ALLOWED_ORIGINS=$CORS_ALLOWED_ORIGINS
 
 ARG PORT=5050
-EXPOSE $PORT
+ENV PORT=$PORT
 
 # Defing service specific arguments
 ARG JWT_SECRET
