Update resource typo

--- a/.aws/peerprep-stack.yaml
+++ b/.aws/peerprep-stack.yaml
@@ -201,7 +201,7 @@ Resources:
     Type: "AWS::EC2::VPCEndpoint"
     Properties:
       VpcEndpointType: "Interface"
-      VpcId: !Ref VPC8839da1
+      VpcId: !Ref VPC
       ServiceName: !Sub "com.amazonaws.${AWS::Region}.ecr.api"
       PolicyDocument: "{\"Version\":\"2008-10-17\",\"Statement\":[{\"Effect\":\"Allow\",\"Principal\":\"*\",\"Action\":\"*\",\"Resource\":\"*\"}]}"
       SubnetIds: 
