--- a/.github/workflows/deploy_backend_aws_dev.yml
+++ b/.github/workflows/deploy_backend_aws_dev.yml
@@ -59,18 +59,18 @@ jobs:
       #       CORS_ALLOWED_ORIGINS=${{ secrets.CORS_ALLOWED_ORIGINS }}
       #       DATABASE_URL=${{ secrets.DATABASE_URL }}
 
-      # - name: Build, tag, and push ${{ env.MATCHING_CONTAINER_NAME }} image to Amazon ECR
-      #   uses: docker/build-push-action@v5
-      #   with: 
-      #     context: backend/${{ env.MATCHING_CONTAINER_NAME }}
-      #     push: true
-      #     tags: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.MATCHING_CONTAINER_NAME }}
-      #     build-args: |
-      #       NODE_ENV=${{ vars.BUILD_ENV }}
-      #       LOG_LEVEL=${{ vars.LOG_LEVEL }}
-      #       CORS_ALLOWED_ORIGINS=${{ secrets.CORS_ALLOWED_ORIGINS }}
-      #       MATCHING_TIMEOUT=${{ vars.MATCHING_TIMEOUT }} 
-      #       EVENT_BUS_CONTAINER_NAME=${{ env.EVENT_BUS_CONTAINER_NAME }}
+      - name: Build, tag, and push ${{ env.MATCHING_CONTAINER_NAME }} image to Amazon ECR
+        uses: docker/build-push-action@v5
+        with: 
+          context: backend/${{ env.MATCHING_CONTAINER_NAME }}
+          push: true
+          tags: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.MATCHING_CONTAINER_NAME }}
+          build-args: |
+            NODE_ENV=${{ vars.BUILD_ENV }}
+            LOG_LEVEL=${{ vars.LOG_LEVEL }}
+            CORS_ALLOWED_ORIGINS=${{ secrets.CORS_ALLOWED_ORIGINS }}
+            MATCHING_TIMEOUT=${{ vars.MATCHING_TIMEOUT }} 
+            EVENT_BUS_CONTAINER_NAME=${{ env.EVENT_BUS_CONTAINER_NAME }}
 
       # - name: Build, tag, and push ${{ env.AUTH_CONTAINER_NAME }} image to Amazon ECR
       #   uses: docker/build-push-action@v5
