add matching service to task deployment stage

--- a/.github/workflows/deploy_backend_aws_dev.yml
+++ b/.github/workflows/deploy_backend_aws_dev.yml
@@ -140,11 +140,11 @@ jobs:
           #   ecs_service:  peerprep-development-ServiceQuestion,
           #   ecs_task_def: peerprep-development-TaskDefinitionQuestion
           # },
-          # {
-          #   name: matching-service,
-          #   ecs_service:  peerprep-development-ServiceMatching,
-          #   ecs_task_def: peerprep-development-TaskDefinitionMatching
-          # },
+          {
+            name: matching-service,
+            ecs_service:  peerprep-development-ServiceMatching,
+            ecs_task_def: peerprep-development-TaskDefinitionMatching
+          },
           # {
           #   name: user-service,
           #   ecs_service:  peerprep-development-ServiceUser,
