--- a/backend/collaboration-service/Dockerfile
+++ b/backend/collaboration-service/Dockerfile
@@ -15,7 +15,7 @@ WORKDIR /app
 ARG NODE_ENV
 ENV NODE_ENV=$NODE_ENV
 
-ARG LOG_LEVEL=infohttps://ap-southeast-1.console.aws.amazon.com/ecs/v2/clusters/peerprep-development-ECSCluster/services/peerprep-development-ServiceMatching/logs?region=ap-southeast-1
+ARG LOG_LEVEL=info
 ENV LOG_LEVEL=$LOG_LEVEL
 
 ARG CORS_ALLOWED_ORIGINS=http://localhost:3000
@@ -28,11 +28,13 @@ ENV SERVICE_PORT=$PORT
 ARG EVENT_BUS_CONTAINER_NAME=${EVENT_BUS_CONTAINER_NAME}/
 ENV EVENT_BUS_CONTAINER_NAME=$EVENT_BUS_CONTAINER_NAME
 
-# ARG COLLABORATION_CACHE_CONTAINER_NAME=${COLLABORATION_CACHE_CONTAINER_NAME}/
-# ENV COLLABORATION_CACHE_CONTAINER_NAME=$COLLABORATION_CACHE_CONTAINER_NAME
+# For local deployment
+ARG COLLABORATION_CACHE_CONTAINER_NAME=${COLLABORATION_CACHE_CONTAINER_NAME}/
+ENV COLLABORATION_CACHE_CONTAINER_NAME=$COLLABORATION_CACHE_CONTAINER_NAME
 
-ARG REDIS_URL=${REDIS_URL}
-ENV REDIS_URL=$REDIS_URL
+# For aws deployment
+# ARG REDIS_URL=${REDIS_URL}
+# ENV REDIS_URL=$REDIS_URL
 
 # Copy only the production artifacts from the build stage
 COPY --from=build /app/dist ./dist
