Fix auth endpoint in user-service

--- a/backend/user-service/Dockerfile
+++ b/backend/user-service/Dockerfile
@@ -22,8 +22,8 @@ ENV LOG_LEVEL=$LOG_LEVEL
 ARG CORS_ALLOWED_ORIGINS=http://localhost:3000
 ENV CORS_ALLOWED_ORIGINS=$CORS_ALLOWED_ORIGINS
 
-
-ENV AUTH_ENDPOINT="${AUTH_GATEWAY}/auth/api/validate"
+ENV AUTH_ENDPOINT="auth/api/validate"
+ENV AUTH_ADMIN_ENDPOINT="auth/api/validateAdmin"
 
 ARG PORT=5005
 ENV PORT=$PORT
