--- a/.github/workflows/deploy_backend_aws_dev.yml
+++ b/.github/workflows/deploy_backend_aws_dev.yml
@@ -47,17 +47,17 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
-      # - name: Build, tag, and push ${{ env.QUESTION_CONTAINER_NAME }} image to Amazon ECR
-      #   uses: docker/build-push-action@v5
-      #   with: 
-      #     context: backend/${{ env.QUESTION_CONTAINER_NAME }}
-      #     push: true
-      #     tags: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.QUESTION_CONTAINER_NAME }}
-      #     build-args: |
-      #       NODE_ENV=${{ vars.BUILD_ENV }}
-      #       LOG_LEVEL=${{ vars.LOG_LEVEL }}
-      #       CORS_ALLOWED_ORIGINS=${{ secrets.CORS_ALLOWED_ORIGINS }}
-      #       DATABASE_URL=${{ secrets.DATABASE_URL }}
+      - name: Build, tag, and push ${{ env.QUESTION_CONTAINER_NAME }} image to Amazon ECR
+        uses: docker/build-push-action@v5
+        with: 
+          context: backend/${{ env.QUESTION_CONTAINER_NAME }}
+          push: true
+          tags: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.QUESTION_CONTAINER_NAME }}
+          build-args: |
+            NODE_ENV=${{ vars.BUILD_ENV }}
+            LOG_LEVEL=${{ vars.LOG_LEVEL }}
+            CORS_ALLOWED_ORIGINS=${{ secrets.CORS_ALLOWED_ORIGINS }}
+            DATABASE_URL=${{ secrets.DATABASE_URL }}
 
       - name: Build, tag, and push ${{ env.MATCHING_CONTAINER_NAME }} image to Amazon ECR
         uses: docker/build-push-action@v5
@@ -135,26 +135,26 @@ jobs:
     strategy:
       matrix:
         service: [
-          # {
-          #   name: question-service,
-          #   ecs_service:  peerprep-development-ServiceQuestion,
-          #   ecs_task_def: peerprep-development-TaskDefinitionQuestion
-          # },
+          {
+            name: question-service,
+            ecs_service:  peerprep-development-ServiceQuestion,
+            ecs_task_def: peerprep-development-TaskDefinitionQuestion
+          },
           {
             name: matching-service,
             ecs_service:  peerprep-development-ServiceMatching,
             ecs_task_def: peerprep-development-TaskDefinitionMatching
           },
-          # {
-          #   name: user-service,
-          #   ecs_service:  peerprep-development-ServiceUser,
-          #   ecs_task_def: peerprep-development-TaskDefinitionUser
-          # },
-          # {
-          #   name: auth-service,
-          #   ecs_service:  peerprep-development-ServiceAuth,
-          #   ecs_task_def: peerprep-development-TaskDefinitionAuth
-          # },
+          {
+            name: user-service,
+            ecs_service:  peerprep-development-ServiceUser,
+            ecs_task_def: peerprep-development-TaskDefinitionUser
+          },
+          {
+            name: auth-service,
+            ecs_service:  peerprep-development-ServiceAuth,
+            ecs_task_def: peerprep-development-TaskDefinitionAuth
+          },
           {
             name: collaboration-service,
             ecs_service:  peerprep-development-ServiceCollaboration,
