add new deployment to test

--- a/.aws/peerprep-stack.yaml
+++ b/.aws/peerprep-stack.yaml
@@ -883,7 +883,7 @@ Resources:
                 awslogs-region: !Ref AWS::Region
                 awslogs-stream-prefix: ecs
       NetworkMode: awsvpc
-      Memory: '512'
+      Memory: '1024'
       Cpu: '256'
 
   TaskDefinitionEventBus:
@@ -897,12 +897,13 @@ Resources:
       ContainerDefinitions:
           - Name: !Ref EventBusName
             Image: !Join ['', [!GetAtt ECRContainerRepo.RepositoryUri, ':', !Ref EventBusName]]
-            # Image: 008129720001.dkr.ecr.ap-southeast-1.amazonaws.com/peerprep-development-ecr-repo:collaboration-cache
+            # Image: 008129720001.dkr.ecr.ap-southeast-1.amazonaws.com/peerprep-development-ecr-repo:event-bus
             Essential: true
             PortMappings:
               - ContainerPort: 6379
+                HostPort: 6379
                 Protocol: tcp
-                Name: !Join ['-', [!Ref EventBusName, '80', 'tcp']]
+                Name: event-bus-6379-tcp
             LogConfiguration: 
               LogDriver: awslogs
               Options:
@@ -911,7 +912,7 @@ Resources:
                 awslogs-region: !Ref AWS::Region
                 awslogs-stream-prefix: ecs
       NetworkMode: awsvpc
-      Memory: '512'
+      Memory: '1024'
       Cpu: '256'
 
   # TaskDefinitionHistory:
@@ -1036,6 +1037,17 @@ Resources:
       PolicyName: !Join ['', [!GetAtt ServiceUser.Name, '-AutoScalingPolicy']]
       PolicyType: TargetTrackingScaling
       ScalingTargetId: !Ref AutoScalingTargetUser
+      TargetTrackingScalingPolicyConfiguration:
+        PredefinedMetricSpecification:
+          PredefinedMetricType: ECSServiceAverageCPUUtilization
+        TargetValue: !Ref AutoScalingTargetValue
+  
+  AutoScalingPolicyCollaboration:
+    Type: AWS::ApplicationAutoScaling::ScalingPolicy
+    Properties:
+      PolicyName: !Join ['', [!GetAtt ServiceCollaboration.Name, '-AutoScalingPolicy']]
+      PolicyType: TargetTrackingScaling
+      ScalingTargetId: !Ref AutoScalingTargetCollaboration
       TargetTrackingScalingPolicyConfiguration:
         PredefinedMetricSpecification:
           PredefinedMetricType: ECSServiceAverageCPUUtilization
