--- a/backend/collaboration-service/Dockerfile
+++ b/backend/collaboration-service/Dockerfile
@@ -28,13 +28,9 @@ ENV SERVICE_PORT=$PORT
 ARG EVENT_BUS_CONTAINER_NAME=${EVENT_BUS_CONTAINER_NAME}/
 ENV EVENT_BUS_CONTAINER_NAME=$EVENT_BUS_CONTAINER_NAME
 
-# For local deployment
-ARG COLLABORATION_CACHE_CONTAINER_NAME=${COLLABORATION_CACHE_CONTAINER_NAME}/
-ENV COLLABORATION_CACHE_CONTAINER_NAME=$COLLABORATION_CACHE_CONTAINER_NAME
-
 # For aws deployment
-# ARG REDIS_URL=${REDIS_URL}
-# ENV REDIS_URL=$REDIS_URL
+ARG REDIS_URL=${REDIS_URL}
+ENV REDIS_URL=$REDIS_URL
 
 # Copy only the production artifacts from the build stage
 COPY --from=build /app/dist ./dist
