--- a/database/compose.yaml
+++ b/database/compose.yaml
@@ -12,6 +12,13 @@ services:
       - "6379:6379"
     networks:
       - peerprep
-
+  # postgresql:
+  #   build: ./postgresql
+  #   ports:
+  #     - "undefined"
+  #   networks:
+  #     - peerprep
+    
 networks:
   peerprep:
+
