--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
     "dev:auth-service": "cd ../backend/auth-service && npm run dev",
     "dev:collaboration-service": "cd ../backend/collaboration-service && npm run dev",
     "dev:matching-service": "cd ../backend/matching-service && npm run dev",
-    "dev-all": "concurrently \"npm run dev:frontend\" \"npm run dev:user-service\" \"npm run dev:question-service\" \"npm run dev:auth-service\" ",
+    "dev-all": "concurrently \"npm run dev:frontend\" \"npm run dev:user-service\" \"npm run dev:question-service\" \"npm run dev:auth-service\" \"npm run dev:matching-service\" \"npm run dev:collaboration-service\" ",
     "setup:frontend": "npm i",
     "setup:user-service": "cd ../backend/user-service && npm i",
     "setup:question-service": "cd ../backend/question-service && npm i",
